src/content/docs/ja/sdk/ios/v4/features/short-links.mdx
---
title: "ショートブランドリンクを解析"
description: "Campaign Labで作成された短縮リンクを解析します。"
slug: "en/sdk/ios/v4/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v5: "/en/sdk/ios/features/short-links"
---
Adjustの[リンク短縮ソリューション](https://help.adjust.com/en/article/short-branded-links)は、複雑で長いリンクをより簡潔で短いリンクに変換します。短縮リンクはディープリンクとキャンペーン情報を保持し、アプリがインストールされていない場合は、ユーザーをApp Storeに誘導します。

このセクションで説明するメソッドを使用して、短縮リンクを解析します。

Adjust SDKでディープリンクを設定する \{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
------------------------------------------------------------------------------------

Adjust SDKに、以下のサポートを追加してください。

* [URIスキーム](/en/sdk/ios/features/deep-links/direct)
* [ディファードディープリンク](/en/sdk/ios/features/deep-links/deferred)

<callout type="note"> 

Adjustのリンク短縮ソリューションを使用するのに、LinkMeや[リンク解析](/en/sdk/ios/features/deep-links/resolution)を設定する必要はありません。
</Callout> 

Adjust SDKを設定して短縮リンクを解析する \{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
-----------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```objc
+ (void)processDeeplink:(nonnull NSURL *)deeplink
      completionHandler:(void (^_Nonnull)(NSString * _Nonnull resolvedLink))completionHandler;
```

</CodeBlock> 

ユーザーをアプリ内にディープリンクするAdjustのショートリンクURLを解決するために、`AppDelegate`から`processDeeplink:completionHandler:`メソッドを呼び出してください。

```objc
- (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity restorationHandler:(void (^)(NSArray<id<uiuseractivityrestoring id="sl-md0000000">> *restorableObjects))restorationHandler {
    if ([[userActivity activityType] isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        // Pass deep link URL to Adjust in order to potentially reattribute the user
        // and to get the URL resolved if it’s a shortened one.
        [Adjust processDeeplink:[userActivity webpageURL]
                completionHandler:^(NSString * _Nonnull resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
        }];
    }
    return YES;
}
```

`processDeeplink:completionHandler:`メソッドに送信したリンクが短縮されていた場合、 `resolvedLink`は拡張された元のリンクを返します。メソッドにパスしたリンクが短縮されていない場合、 `resolvedLink`にはパスした同じリンクが含まれます。

